added django workaround for submitting ajax and csrf

--- a/templates/html5.html
+++ b/templates/html5.html
@@ -70,6 +70,7 @@
 
   <!-- scripts concatenated and minified via ant build script-->
   <script defer src="/media/js/plugins.js"></script>
+  <script defer src="/media/js/django-jquery-csrf.js"></script>
   <script defer src="/media/js/bashoneliners.js"></script>
   <!-- end scripts-->
 
